# GMR

./: README.md  README_motion_player.md  pyproject.toml  pytest.ini  ruff.toml  setup.py
docs/: design.md  requirements.md
general_motion_retargeting/: motion_retarget.py  params.py
general_motion_retargeting/benchmark/: __init__.py  dataset_loader.py  evaluator.py  param_space.py
general_motion_retargeting/ik_configs/: bvh_lafan1_to_t1.json
motion_player/: __init__.py  cli.py
motion_player/backends/: __init__.py  mujoco_backend.py  nv_backend.py
motion_player/core/: __init__.py  adapters.py  editing.py  metrics.py  models.py  playback.py
scripts/: bvh_to_robot.py  bvh_to_robot_dataset.py  optimize_ik_config.py
tests/: conftest.py
tests/benchmark/: fixtures.py  test_dataset_loader.py  test_evaluator.py  test_optimize_integration.py  test_param_space.py
